// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`react-icu render Info 1`] = `
Array [
  <div
    data-id="unread"
>
    You have 
    <a
        href="#"
    >
        1 unread message
    </a>
    .
</div>,
  <div
    data-id="total"
>
    <label>
        Total:
    </label>
    <b>
        13 messages
    </b>
</div>,
]
`;

exports[`react-icu render Info: ru (partial) 1`] = `
Array [
  <div
    data-id="unread"
>
    You have 
    <a
        href="#"
    >
        1 unread message
    </a>
    .
</div>,
  <div
    data-id="total"
>
    <label>
        Total:
    </label>
    <b>
        13 сообщений
    </b>
</div>,
]
`;

exports[`react-icu render Info: ru 1`] = `
Array [
  <div
    data-id="unread"
>
    У вас 
    <a
        href="#"
    >
        1 непрочитанное сообщение
    </a>
    .
</div>,
  <div
    data-id="total"
>
    <label>
        Всего:
    </label>
    <b>
        13 сообщений
    </b>
</div>,
]
`;

exports[`react-icu transform Info 1`] = `
"import __jsx from \\"tx-i18n/jsx\\";
import __ from \\"tx-i18n/text\\";
import * as React from 'react';
import { enPlural as plural } from '../../../icu/plural/en';
export const Info = ({ unread, total }) => <>
	{__jsx(\\"You have <a1>{v2, plural, one {# unread message} other {# unread messages}}</a1>.\\", [{ type: \\"div\\", props: { \\"data-id\\": \\"unread\\" } }, { type: \\"a\\", props: { href: \\"#\\" } }, { $: plural, _: unread }])}
	<div data-id=\\"total\\">
		<label>{__(\\"Total:\\")}</label>
		<b>{__(\\"{v1, plural, one {# message} other {# messages}}\\", [{ $: plural, _: total }])}</b>
	</div>
</>;
"
`;
